test/invalidImports/service.interface.ts
export interface IA {}

export class ClassB {
  public errorCode: string;
}
